# $Id: CHANGELOG 776 2008-12-7 01:30:27Z dane $

----------------
Mapnik Changelog
----------------
 
A simple log of core changes affecting Mapnik usage.

Developers: Please commit along with changes.

For a complete change history, see the SVN log.



Mapnik 0.6.2 Release
--------------------

- PointDatasource: fixed problem with missing geometries (#402)

- PostGIS: Add a 'persist_connection' option (default true), that when false will release 
  the idle psql connection after datasource goes out of scope (r1337) (#433,#434)

- Filters: Add support for '!=' as an alias to '<>' for not-equals filters (avoids &lt;&gt;) (r1326) (#427)  

- Gdal Plugin: Add support for Gdal overviews, enabling fast loading of > 1GB rasters (r1321) (#54)

- PostGIS Plugin: Add bbox substitution ability in sql query string (r1292) (#415)

- PostGIS Plugin: Throw and report errors if SQL execution fails (r1291) (#363)

- Python: Added 'mapnik.has_pycairo()' function to test for pycairo support (r1278) (#284)

- PostGIS Plugin: Added missing support for BigInt(int8) postgres datatypes (r1250) (#384)



Mapnik 0.6.1 Release
--------------------

(Packaged from r1247)

- XML: Fixed serialization and parsing bugs related to handling of integers and Enums (#328,#353)

- SCons: Added the ability to set the PKG_CONFIG_PATH env setting (#217)

- SCons: Improved linking to only required libraries for libmapnik (#371)

- Shape Plugin: Added compile time flag to allow disabling the use of memory mapped files (r1213) (#342)

- Core: Improved support for PPC (Big endian) architectures (r1198 -> r1213)

- Scons: Improved auto-detection of boost libs/headers (r1200) (#297)

- Plugins: Exposed list of available/registered plugins (r1180) (#246)

- SCons: Improve build support for SunCC (patches from River Tarnell) (r1168, r1169)

- Python: Pickling support for text_symbolizer (r1164) (#345)

- Python: Pickling support for proj_transform and view/coord_transform (r1163) (#345)
